# c2p_server

./: .gitignore  README.md
GameScript/: .project  .pydevproject
GameScript/GameScript/: GameProtocol_pb2.py  GetGameGroup.py  LobbyProtocol_pb2.py  SendPackageTwoPart.py  SendTowPkgOnce.py  StopServer.py  TestDrawPrize.py  TestSendHeader.py  VerifyToken.py
GameScript/python/: ClientProtocol.py  ClientSimulator.py  DataServer_pb2.py  GameProtocol_pb2.py  HttpLogin.py  HttpRegister.py  ReloadConf.py  SendPackageTwoPart.py  TestPingPong.py  VerifyToken.py  createrole.py  multithread.py  oneplayer.py
JavaServer/LoginServerAgent/: .classpath  .project
JavaServer/LoginServerSim/: .classpath  .project
Server/: DataServer.pb.cc  DataServer.pb.h  LobbyProtocol.pb.cc  LobbyProtocol.pb.h  Server.opensdf  Server.sln  network.rar
Server/DataServer/: CMakeLists.txt  DataServer.cpp  DataServer.h  DataServer.vcxproj  DataServer.vcxproj.filters  DataThread.cpp  DataThread.h  GsConnectionMng.cpp  GsConnectionMng.h  GsHandler.cpp  GsHandler.h  Mysql.cpp  Mysql.h  PlayerDataMng.cpp  PlayerDataMng.h  ServerConfig.cpp  ServerConfig.h  SqlTables.h  header.h  log.properties  main.cpp  makefile
Server/DataServer/Debug/: DataServer.lastbuildstate
Server/DataServer/log/: dataserver.log.2014-06-17  dataserver.log.2014-06-18  dataserver.log.2014-06-30
Server/DataServer/protocol/: RoleData.pb.cc
Server/Debug/: gs.xml  lobby.properties  lobby.xml  log.properties
Server/GameServer/: CMakeLists.txt  ClientConnectionMng.cpp  ClientConnectionMng.h  ClientHandler.cpp  ClientHandler.h  CmdHandler.cpp  CmdHandler.h  DataServerAgent.h  DrawPrize.cpp  DrawPrize.h  DrawPrizeMng.cpp  DrawPrizeMng.h  DsHandler.cpp  DsHandler.h  GMCommand.cpp  GMCommand.h  GameServer.cpp  GameServer.h  GameServer.vcxproj  GameServer.vcxproj.filters  GateController.cpp  GateController.h  Goods.h  GoodsMng.cpp  GoodsMng.h  Hero.cpp  Hero.h  HeroMng.cpp  HeroMng.h  KeyGen.h  LobbyHandler.cpp  LobbyHandler.h  LoginAgentHandler.cpp  LoginAgentHandler.h  Player.cpp  Player.h  PlayerDataGetter.cpp  PlayerDataGetter.h  PlayerMng.cpp  PlayerMng.h  (+13 more)
Server/GameServer/log/: gameserver.log.2014-07-01.10
Server/GameServer/protocol/: GameProtocol.pb.cc  GameProtocol.pb.h  GameProtocol.proto  RoleData.pb.h  RoleData.proto  gen_proto.bat
Server/GameServer/redis/: anet.cpp  redisclient.h
Server/GameServer/xml/: BattleGate.xml  DrawPrize.xml  EquipCompound.xml  GatePrizePool.xml  Goods.xml  Hero.xml  HeroUpgrade.xml  InitPlayerData.xml  PlayerLevel.xml
Server/LobbyServer/: CMakeLists.txt  ClientMsgHandler.cpp  ClientMsgHandler.h  GameGroupMng.cpp  GameGroupMng.h  GameServerHandler.cpp  GameServerHandler.h  LobbyServer.cpp  LobbyServer.h  LobbyServer.vcxproj  LobbyServer.vcxproj.filters  ServerConfig.cpp  ServerConfig.h  header.h  main.cpp
Server/LobbyServer/Debug/: LobbyServer.lastbuildstate
Server/TestEchoServer/: TestEchoServer.vcxproj  main.cpp
Server/TestHttpServer/: TestHttpServer.vcxproj  TestHttpServer.vcxproj.filters  connection.cpp  connection.hpp  header.hpp  mime_types.cpp  mime_types.hpp  posix_main.cpp  reply.cpp  reply.hpp  request.hpp  request_handler.cpp  request_handler.hpp  request_parser.cpp  (+4 more)
(+94 files in other folders)
